Web Service, Client and database

--- a/WebClient/ClientSoapPHP/Travel-Agency/weatherapi.html
+++ b/WebClient/ClientSoapPHP/Travel-Agency/weatherapi.html
@@ -76,7 +76,7 @@
     </div>
     <script>
       /// OpenWeatherMap API. Do not share it publicly.
-const api = 'cf3b11c7586d99f6b2c42cb25283ccfb'; //Replace with your API
+const api = 'API_KEY'; //Replace with your API
 const iconImg = document.getElementById('weather-icon');
 const loc = document.querySelector('#location');
 const tempC = document.querySelector('.c');
