--- a/Client/about.html
+++ b/Client/about.html
@@ -14,10 +14,9 @@
 		<nav class="link">
 			<h2 class="hidden">navigation</h2>
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="tour.html">Tours</a></li>
+				<li><a href="index.php">Home</a></li>
+				<li><a href="tour.php">Tours</a></li>
 				<li><a href="flight.html">Flights</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
 				<li class="active"><a href="about.html">About</a></li>
 			</ul>
 		</nav>
